fix overflow body

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -65,7 +65,7 @@ body {
   font-family: sans-serif;
   background-color: #FAFAFA;
   font-size: 16px;
-  overflow: hidden;
+  overflow: auto;
   color:rgba(0, 0, 0, 0.78);
 
 }
